# rustypass

./: Cargo.toml  rustfmt.toml
rustypass/salim/: user
rustypass/salim/accounts/: gmail  yahoo
rustypass/test/: user
rustypass/test/accounts/: test
src/: lib.rs  main.rs  tests.rs
